Sat Jun 27 04:36:39 GMT 2015  Olly Betts <olly@survex.com>

	* src/message.c: Fix comment typo.

Fri Jun 26 00:42:07 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: More updates for 1.2.20.

Fri Jun 26 00:05:51 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc,src/gfxcore.h,src/mainfrm.cc: Add support for reading
	  DEM data which isn't in a .zip file.

Thu Jun 25 21:58:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Force a refresh after loading terrain data so
	  that it gets displayed right away.

Thu Jun 25 05:16:10 GMT 2015  Olly Betts <olly@survex.com>

	* lib/icons/Makefile.am: Fix install directories for filetype icons.

Wed Jun 24 12:51:10 GMT 2015  Olly Betts <olly@survex.com>

	* lib/icons/Makefile.am: Fix for VPATH build and to create directories
	  to install icons to if necessary.

Wed Jun 24 12:45:52 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.20.

Wed Jun 24 12:45:06 GMT 2015  Olly Betts <olly@survex.com>

	* lib/unlaunchpad-po: Fix regex to clean up transifex source refs.

Wed Jun 24 12:24:31 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Add a FIXME about problem reading zip files with
	  wxZipInputStream on __WXMSW__.

Wed Jun 24 12:23:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: When reading .hgt files, flag a read error if we
	  can't read any data.

Wed Jun 24 12:22:53 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: If we reading terrain data fails, don't continue and
	  try to display it.

Wed Jun 24 12:21:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Avoid unnecessary call to OpenEntry() if we're
	  already on the zip entry we want to read.

Mon Jun 22 05:00:49 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Lowercase filenames of .zip entries before checking
	  extensions.

Mon Jun 22 04:36:26 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c: Define MASK_PASSAGE after MASK_NOSURVEY to match